@@ -4,13 +4,13 @@
 </p>
 
 <p>
-  <b>Endereço:</b>
-  <%=h @hospede.endereco %>
+  <b>Nascimento:</b>
+  <%=h @hospede.nascimento %>
 </p>
 
 <p>
-  <b>Nascimento:</b>
-  <%=h @hospede.nascimento %>
+  <b>Endereço:</b>
+  <%=h @hospede.endereco %>
 </p>
 
 <p>
